SFRP-2842 Avoid that the scroll bar gets covered by other content

--- a/assets/css/helppage.css
+++ b/assets/css/helppage.css
@@ -77,6 +77,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
 #navScrollspy .affix {
     height: 100vh;
     overflow-y: auto;
+	z-index: 100;
 }
 
 #navScrollspy .affix > ul {
